--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
       </main>
       <section class="result">
         <div class="result__counts">
-          <div class="result--characters"></div>
-          <div class="result--words"></div>
-          <div class="result--sentences"></div>
+          <div class="result__text">
+            <p class="result__count result__count--chars">00</p>
+            <p>Total Characters</p>
+          </div>
+          <div class="result__text">
+            <p class="result__count result__count--words">00</p>
+            <p>Word Count</p>
+          </div>
+          <div class="result__text">
+            <p class="result__count result__count--sentences">00</p>
+            <p>Sentence Count</p>
+          </div>
         </div>
 
         <div class="result__progress-bars"></div>
