Add logic to count characters

--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
           </div>
         </div>
 
-        <div class="result__progress-bars"></div>
+        <div class="result__progress-bars">
+          <h2>Letter Density</h2>
+          <div class="progress"></div>
+          <p>
+            See more
+            <span role="img" aria-label="Chevron icon" class="chevron"></span>
+          </p>
+        </div>
       </section>
     </div>
     <script src="./script.js"></script>
