Add styles for tablets

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="result__progress-bars">
           <h2>Letter Density</h2>
           <div class="progress"></div>
-          <p>
+          <p hidden>
             See more
             <span role="img" aria-label="Chevron icon" class="chevron"></span>
           </p>
