Add text info to see more & add logic

--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@
         <div class="result__progress-bars">
           <h2>Letter Density</h2>
           <div class="progress"></div>
-          <p>
+          <p class="no-characters">
+            No characters found. Start typing to see letter density
+          </p>
+          <p class="see-more" hidden>
             See more
-            <span role="img" aria-label="Chevron icon" class="chevron"></span>
+            <span role="img" aria-label="Chevron icon">
+              <img class="chevron" src="" alt="" />
+            </span>
           </p>
         </div>
       </section>
