--- a/index.html
+++ b/index.html
@@ -75,7 +75,26 @@
           <p class="see-more" hidden>
             See more
             <span role="img" aria-label="Chevron icon">
-              <img class="chevron" src="" alt="" />
+              <svg
+                class="chevron"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 640"
+              >
+                <path
+                  d="M297.4 470.6C309.9 483.1 330.2 483.1 342.7 470.6L534.7 278.6C547.2 266.1 547.2 245.8 534.7 233.3C522.2 220.8 501.9 220.8 489.4 233.3L320 402.7L150.6 233.4C138.1 220.9 117.8 220.9 105.3 233.4C92.8 245.9 92.8 266.2 105.3 278.7L297.3 470.7z"
+                />
+              </svg>
+            </span>
+            <span hidden role="img" aria-label="Chevron icon">
+              <svg
+                class="chevron"
+                viewBox="0 0 12 7"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M6.25 0.65625L10.875 5.21875C11.0312 5.375 11.0312 5.625 10.875 5.75L10.25 6.375C10.125 6.53125 9.875 6.53125 9.71875 6.375L6 2.6875L2.25 6.375C2.09375 6.53125 1.875 6.53125 1.71875 6.375L1.09375 5.75C0.9375 5.625 0.9375 5.375 1.09375 5.21875L5.71875 0.65625C5.875 0.5 6.09375 0.5 6.25 0.65625Z"
+                />
+              </svg>
             </span>
           </p>
         </div>
