--- a/index.html
+++ b/index.html
@@ -107,6 +107,6 @@
         </div>
       </section>
     </div>
-    <script src="./script.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
