Modify js code to show no space indicator text & improve error logic

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         <div class="result__counts">
           <div class="result__text">
             <p class="result__count result__count--chars">00</p>
-            <p>Total Characters</p>
+            <p>
+              Total Characters
+              <span class="result__count--no-space" hidden>(no space)</span>
+            </p>
           </div>
           <div class="result__text">
             <p class="result__count result__count--words">00</p>
